[REFACTOR][REPO][refactor/repo/event-driven-platform-migration]: Migrate platform to NATS and Redis
